Add repo link to footer

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -217,7 +217,7 @@
     </div>
 
     <div class="footer">
-      <a class="git-link" href="https://github.com/BYUCS260/lab-1-photography-website-ian-jack">Lab 1 Repo</a>
+      <a class="git-link" href="https://github.com/ian-jack/meme-emporium">Git Repo</a>
     </div>
 
   </div>
