Add random meme generator, add tabs to gallery

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/gallery.html">Gallery</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/random-meme.html">Random Meme</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -45,9 +48,8 @@
           than some may realize. Dilligent efforts have been made to catalouge memes as they have grown and evolved, one of
           more notable being <a href="https://knowyourmeme.com/"> Know Your Meme,</a> which exhaustively documents memes and
           their origins. This sit is not meant to be nearly as comprehensive, rather, it serves as more of a hall of fame for
-          memes current, aging, or long-dead. Initially it will have only a basic gallery, but in later revisions visitors can
-          expect more detailed information on each meme, a random meme generator, and even the ability to create and post their
-          own memes.
+          memes current, aging, or long-dead. In later revisions visitors can expect more detailed information on each meme
+          and even the ability to create and post their own memes.
         </p>
       </div>
     </div>
